[metadata]
name = astara-neutron
summary = Astara API extensions for OpenStack Neutron
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/openstack/akanda-neutron
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages =
    astara_neutron

[entry_points]
neutron.db.alembic_migrations =
    astara-neutron = astara_neutron.db.migration:alembic_migrations


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
where = test
verbosity = 2
detailed-errors = 1
cover-package = akanda
